[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bosses/turret_boss.png" type="Texture" id=1]
[ext_resource path="res://enemies/bosses/TheTurret.gd" type="Script" id=2]
[ext_resource path="res://physics/HitEffect.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.5, 42.5 )

[node name="TheTWord" type="Area2D" groups=["enemies"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -10.5 )
shape = SubResource( 1 )

[node name="Row1" type="Node2D" parent="."]

[node name="Gun1" type="Position2D" parent="Row1"]
position = Vector2( -34, 42 )

[node name="Gun2" type="Position2D" parent="Row1"]
position = Vector2( -21, 45 )

[node name="Gun3" type="Position2D" parent="Row1"]
position = Vector2( -15, 45 )

[node name="Gun4" type="Position2D" parent="Row1"]
position = Vector2( -1, 45 )

[node name="Gun5" type="Position2D" parent="Row1"]
position = Vector2( 17, 44 )

[node name="Gun6" type="Position2D" parent="Row1"]
position = Vector2( 25, 44 )

[node name="Gun7" type="Position2D" parent="Row1"]
position = Vector2( 34, 44 )

[node name="Row2" type="Node2D" parent="."]

[node name="Gun1" type="Position2D" parent="Row2"]
position = Vector2( 59, 8 )

[node name="Gun2" type="Position2D" parent="Row2"]
position = Vector2( 67, -13 )

[node name="Gun3" type="Position2D" parent="Row2"]
position = Vector2( 62, -28 )

[node name="Gun4" type="Position2D" parent="Row2"]
position = Vector2( 62, -35 )

[node name="Gun5" type="Position2D" parent="Row2"]
position = Vector2( 62, -42 )

[node name="Row3" type="Node2D" parent="."]

[node name="Gun1" type="Position2D" parent="Row3"]
position = Vector2( 45, -60 )

[node name="Gun2" type="Position2D" parent="Row3"]
position = Vector2( 32, -61 )

[node name="Gun3" type="Position2D" parent="Row3"]
position = Vector2( 27, -61 )

[node name="Gun4" type="Position2D" parent="Row3"]
position = Vector2( 11, -63 )

[node name="Gun5" type="Position2D" parent="Row3"]
position = Vector2( 6, -63 )

[node name="Gun6" type="Position2D" parent="Row3"]
position = Vector2( 0, -63 )

[node name="Gun7" type="Position2D" parent="Row3"]
position = Vector2( -6, -63 )

[node name="Gun8" type="Position2D" parent="Row3"]
position = Vector2( -11, -63 )

[node name="Gun9" type="Position2D" parent="Row3"]
position = Vector2( -24, -66 )

[node name="Gun10" type="Position2D" parent="Row3"]
position = Vector2( -41, -66 )

[node name="Row4" type="Node2D" parent="."]

[node name="Gun1" type="Position2D" parent="Row4"]
position = Vector2( -57, -46 )

[node name="Gun2" type="Position2D" parent="Row4"]
position = Vector2( -59, -38 )

[node name="Gun3" type="Position2D" parent="Row4"]
position = Vector2( -62, -27 )

[node name="Gun4" type="Position2D" parent="Row4"]
position = Vector2( -62, -21 )

[node name="Gun5" type="Position2D" parent="Row4"]
position = Vector2( -62, -16 )

[node name="Gun6" type="Position2D" parent="Row4"]
position = Vector2( -62, -10 )

[node name="Gun7" type="Position2D" parent="Row4"]
position = Vector2( -54, 10 )

[node name="HitEffect1" parent="." instance=ExtResource( 3 )]
position = Vector2( 41, 24 )

[node name="HitEffect2" parent="." instance=ExtResource( 3 )]
position = Vector2( -41, 24 )

[node name="HitEffect3" parent="." instance=ExtResource( 3 )]
position = Vector2( -41, -45 )

[node name="HitEffect4" parent="." instance=ExtResource( 3 )]
position = Vector2( 41, -45 )
